--- a/config/settings.json
+++ b/config/settings.json
@@ -1,7 +1,7 @@
 {
 "NomorOwner2":"6285823411987@s.whatsapp.net",
-"NamaOwner":"Ramdani Official",
-"NamaBot":"Jembot_Botz",
+"NamaOwner":"OnetZ",
+"NamaBot":"OnetZ Botz",
 "NomorOwner":"6282296483289",
 "NomorBot":"6285823411987",
 "SessionsName":"sessions",
